# src/beeApi/models/DSSVLopHP.go
@@ -1,0 +1,13 @@
+package models
+
+type IDSinhVienSlices []string
+
+type DanhSachSinhVienLopHocPhan struct {
+	MaLHP string
+	DsSV  IDSinhVienSlices
+}
+
+type SinhVienVaLop struct {
+	MaLHP string
+	MaSV  string
+}
