# src/beeApi/models/LopHocPhan.go
@@ -1,8 +1,7 @@
 package models
 
 type LopHocPhan struct {
-	Ma         string
-	Ten        string
-	GiaoVien   string
-	DsSinhVien SinhVienSlices
+	Ma       string
+	Ten      string
+	GiaoVien string
 }
